--- a/bem/main.css
+++ b/bem/main.css
@@ -13,19 +13,18 @@
   grid-column-gap: 1%;
 }
 
-.produto__prodduto-imagem {
+.produto__imagem {
   width: 100%;
 }
-.produto__produto-nome {
+.produto__nome {
   font-size: 1.2em;
   margin: 8px 0;
 }
-.produto__produto-descricao {
+.produto__descricao {
   color: gray;
 }
 
-.em-destaque {
-  /* modificador */
+.produto--em-destaque {
   border: 2px solid gold;
   padding: 8px;
   background-color: #ffff42;
